# devops-policy-audit-toolkit

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  contribution_log.txt  devops-audit.config.json  pyproject.toml
.github/workflows/: ci.yml  docker-smoke.yml
DevOps-AWS/1/: introduction-to-devops.txt
DevOps-AWS/10/: jenkins.txt
DevOps-AWS/11/: maven.txt
DevOps-AWS/12/: jenkins-node.txt
DevOps-AWS/13/: tomcat.txt
DevOps-AWS/14/: tomcat-rectified.txt
DevOps-AWS/15/: jenkins.txt
DevOps-AWS/16/: declarative.txt
DevOps-AWS/17/: declarative.groovy  sonarqube.txt
DevOps-AWS/18/: 18.yaml  declarative.groovy
DevOps-AWS/19/: 19.txt  declarative.groovy  stj.groovy
DevOps-AWS/21/: 21.txt
DevOps-AWS/23/: 23.txt
DevOps-AWS/54/: 54.txt  54.yaml
DevOps-AWS/55/: 55-1.yaml  55.txt  55.yaml
DevOps-AWS/57/: 57.txt
DevOps-AWS/58/: 58.yaml
DevOps-AWS/59/: 59.txt  59.yaml
DevOps-AWS/6/: 6.txt
DevOps-AWS/60/: 60-1.yaml  60-2.yaml  60.txt  60.yaml
devops_toolkit/: __init__.py  audit.py  baseline.py  checks.py  cli.py  config.py  inventory.py  metrics.py  models.py  policy.py  reporting.py  rules.py  sarif.py
docs/: PORTFOLIO_EVIDENCE.md  RELEASE_CHECKLIST.md  command-checklist.md  engineering-runbook.md  labs-index.md  operational-runbook.md  policy-model.md  production-readiness.md  roadmap.md
scripts/: create_backdated_commits.sh  devops_audit.py
tests/: test_baseline.py  test_cli.py  test_config.py  test_devops_audit.py  test_devops_checks.py  test_inventory.py  test_metrics.py  test_policy.py  test_rules.py  test_sarif.py
(+34 files in other folders)
